# End-to-End-Insurance-Risk-Analytics-Predictive-Modeling

./: .dvcignore  .gitignore  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  TASK1_CHECKLIST.md  TASK1_STATUS.md  TASK2_CHECKLIST.md  TASK2_SUMMARY.md  TASK3_SETUP.md  TASK4_SETUP.md  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ci.yml
data/: README.md
notebooks/: 01_eda_analysis.ipynb  02_ab_hypothesis_testing.ipynb  03_statistical_modeling.ipynb
reports/: README.md  final_report.md  interim_report.md
reports/figures/: README.md
scripts/: update_interim_report.py
src/: __init__.py
src/ab_testing/: __init__.py  hypothesis_tests.py
src/data/: load_data.py
src/eda/: __init__.py
src/modeling/: __init__.py  data_preparation.py  interpretability.py  models.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  test_data_loading.py  test_hypothesis_tests.py
